# llm_heads_up_gauntlet

./: README.md  commands.txt  design.txt  docker-compose.yml
.github/workflows/: backend-ci.yaml
backend/: .env.example  Dockerfile  README.md  alembic.ini  database.db  pyproject.toml
backend/app/: __main__.py  main.py
backend/app/agents/: example_usage.py  guess_agent.py  hint_agent.py  judge_agent.py  llm_provider.py  orchestrator.py  schemas.py
backend/app/api/: __init__.py  main.py
backend/app/api/routes/: games.py  leaderboard.py  words.py
backend/app/core/: audit.py  cache.py  config.py  database.py  logging.py  metrics.py  rate_limit.py  reliability.py  secrets.py  tokens.py  validation.py
backend/app/engine/: graphs.py  instrumentation.py  nodes.py  parallel.py  state.py
backend/app/evaluation/: exporter.py  metrics.py  schemas.py  tool.py
backend/app/knowledge/: embeddings.py  processors.py  rag.py  vector_store.py
backend/app/memory/: episodic_store.py  reflect.py  schemas.py  semantic_store.py
backend/app/models/: db_models.py  schemas.py
backend/app/obs/: logging.py  metrics.py  server.py  tracing.py
backend/app/policy/: learner.py  schemas.py  tools.py
backend/app/repositories/: words.py
backend/app/tests/: test_agents_hint.py  test_config.py  test_embeddings.py  test_engine_flip_script.py  test_engine_heads_up.py  test_eval_metrics.py  test_games.py  test_health.py  test_leaderboard.py  test_llm_provider.py  test_logging.py  test_memory_episodic.py  test_memory_integration.py  test_memory_semantic.py  test_policy_integration.py  test_policy_learner.py  test_policy_reliability_integration.py  test_rag.py  test_reliability_wrappers.py  test_security_validation.py  test_vector_store.py  test_words.py  test_words_db.py
backend/app/utils/: health.py
backend/migrations/: env.py
backend/migrations/versions/: 530699e96751_initial_schema.py  af0f5fce743f_initial_schema.py
deploy/: grafana-dashboard.json  prometheus.yml
