[project]
name = "llm-game-heads-up"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "anthropic>=0.74.1",
    "asyncpg>=0.30.0",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "langchain>=1.0.8",
    "langchain-anthropic>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.3",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.0.3",
    "llmlingua>=0.2.2",
    "loguru>=0.7.3",
    "openai>=2.8.1",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "orjson>=3.11.4",
    "pinecone",
    "pinecone-client>=6.0.0",
    "prometheus-client>=0.23.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.22.0",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # docstring first line imperative
    "UP",   # pyupgrade
]
fix = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
